update: the index file

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     </div>
   </div>
 </div>
+
+<h2>New update</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea iusto similique molestiae obcaecati illum voluptates porro necessitatibus enim, amet iure molestias alias facilis illo, pariatur aliquid modi nesciunt! Obcaecati, voluptas!</p>
     
 
 
